<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">大浪淘沙</string>
    <string name="home">首页</string>
    <string name="shoppcart">购物车</string>
    <string name="me">个人中心</string>

    <!--个人中心-->
    <string name="setting">设置</string>
    <string name="manage_delivery_address">管理收货地址</string>
    <string name="change_phone">修改/绑定手机</string>
    <string name="change_weixin">修改/绑定微信</string>
    <string name="change_pwd">修改密码</string>
    <string name="new_phone">请输入新的手机号码</string>
    <string name="weinxin_number">请输入微信号码</string>
    <string name="enter_code">请输入手机验证码</string>
    <string name="save">保存</string>
    <string name="change_oneinfo">修改个人资料</string>
    <string name="change_username">修改用户名</string>
    <string name="myorder">我的订单</string>
    <string name="oreder_details">订单详情</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_footprint">我的足迹</string>
    <string name="account_center">账务中心</string>
    <string name="my_rating">我的评价</string>
    <string name="contact_us">联系我们</string>
    <string name="about_taosha">关于大浪淘沙</string>
    <string name="hint_input_phone">请输入您的手机号</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="hint_set_pwd">请设置登录密码</string>
    <string name="hint_again_pwd">请再次输入登录密码</string>

    <string name="good_count">x %d</string>
    <string name="price">￥%s</string>
    <string name="total_0">合计：￥0.00</string>
    <string name="total">合计：￥</string>

    <string name="error_network">网络访问错误，请稍后再试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="loading">请稍后...</string>
    <string name="secondkill_activity">秒杀活动</string>

    <string name="str1">4.3 大朗淘纱App平台不对外公开或向第三方提供单个用户的注册资料，除非：\n

        &#160;&#160;• 事先获得用户的明确授权；\n
        &#160;&#160;• 只有透露你的个人资料，才能提供你所要求的产品和服务；\n
        &#160;&#160;• 根据有关的法律法规要求；\n
        &#160;&#160;• 按照相关政府主管部门的要求；\n
        &#160;&#160;• 为维护大朗淘纱App平台的合法权益。</string>
    <string name="str2">\t\t大朗淘纱——全国首家专业色纱现货商城，旨在为大朗色纱供应商提供一个开放、便捷、有效的线上销售平台，开创毛织名镇【互联网+纱线】现代化营销新模式，推动大朗大朗淘纱商城线上业务开拓发展。\n
\t\t依托“毛织网”积累的人脉、行业资源和技术力量，淘纱商城两年内就吸引了众多企业进驻，整合了数千家品牌商、生产商，为商家和消费者之间提供一站式解决方案。淘纱商城上品种繁多，有麻纱、棉纺纱、混纺纱、化纤纱、花式纱、秒纱等，所有纱线100%品质保证。在淘纱商城上，只有你想不到的，没有你找不到的纱线。\n
\t\t淘纱商城始终坚持诚信、活跃、快速的网络交易文化，可谓“纱线可不淘，信誉不能弃”！大朗淘纱，一个有态度的纱线商城！</string>
    <string name="str3">\t一、担保支付
担保支付就是买家付款后钱是先到大朗淘纱商城第三方平台中间账户的，然后卖家发货，买家收到货在网上确认后钱再给卖家的交易流程。卖家要通过大朗淘纱商城进行担保交易，需要先通过实名认证。\n
\t二、其它支付
\t(1)货到付款。货到付款是指卖方可以通过快递等物流机构代为收取货款，以快递送货为例，当货物送达买方时，当买方签收货物时需要把货款支付给快递公司，再由快递公司支付给卖方\n
\t(2)转账支付。指买家要购买的商品在与商家谈好购买价格，可以通过商家提供的银行卡号或者使用微信、支付宝等支付方式转账。卖方在收到货款的第一时间或限定时间内要向买方发货。买家收到货物，并确认无误后，交易结束。\n
\t(3)当面交易。指买方卖方在距离上比较近，或为了保证货物安全等，需要当面交付。同城交易基本上就是当面交易。</string>

    <string name="str4">\t为了确保纱线商城的产品质量和服务，商城采取两大措施：\n
\t1.产品在商城上架前，必须通过我们的品质抽检，供应商必须签订产品质量保证协议。\n
\t2.客户在大朗淘纱商城下单付款后，确认收货前，货款是先进入商城平台账户，作为第三方保障。只有客户确认收款后，商城才会将货款转给供应商，
        如果中间供应商有违约或者产品质量问题，及时联系商城客服,作为第三方平台我们会公平、公正经过核查事实，判断责任方,并按支付宝担保形式处理。</string>

    <string name="str5">\t退货时，物流费用赔付分以下三种情况：\n
\t1、买卖双方协商一致，根据协商约定结果，来确定运费承担方 \n
\t2、运费支付协商过程出现争议，根据“谁过错，谁承担”的原则处理。产品质量问题，由卖家承担运费；如果出现淘纱商城无法确定责任方，则双方共同承担运费。\n
\t3、如果买家并非因为产品质量问题，而是因为买家自身出现变数而进行退货，则买家需承担发货和退货的运费。</string>
    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">59a8c40b</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>

    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>

    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
