<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.yizhisha.taosha.base.BaseToolbar
        android:id="@+id/toolbar"
        style="@style/basetoolbarStyle"
        app:leftButtonIcon="@drawable/icon_back"
        app:title="@string/change_phone"/>
    <LinearLayout
        android:id="@+id/binded_phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_14">
        <TextView
            android:id="@+id/bind_tv"
            style="@style/TS.Theme.Widget.Text"
            android:text="已绑定手机号码:"/>
        <TextView
            android:id="@+id/bind_phone_tv"
            style="@style/TS.Theme.Widget.Text"
            android:text=""/>

    </LinearLayout>
    <com.yizhisha.taosha.widget.ClearEditText
        android:id="@+id/phone_chagephone_et"
        style="@style/TS.Theme.Widget.EditText"
        android:background="@drawable/shape_edittext_gray_selector"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:gravity="center_vertical"
        android:hint="@string/new_phone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <EditText
            android:id="@+id/getcode_chagephone_et"
            style="@style/TS.Theme.Widget.EditText"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:background="@drawable/shape_edittext_gray_selector"
            android:gravity="center_vertical"
            android:hint="@string/enter_code"
            />

        <TextView
            android:id="@+id/getcode_chagephone_tv"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:textColor="@color/red"
            android:background="@drawable/shape_edittext_red_selector"
            android:layout_marginRight="@dimen/dp_10"
            android:text="获取验证码"/>
    </LinearLayout>

    <Button
        android:id="@+id/sava_chagephone_btn"
       android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/shape_redbtn_selector"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/save"/>

</LinearLayout>