<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.yizhisha.taosha.base.BaseToolbar
        android:id="@+id/toolbar"
        style="@style/basetoolbarStyle"
        app:isShowSearchView="false"
        app:leftButtonIcon="@drawable/icon_right"
        app:title="@string/setting"/>
        <RelativeLayout
            android:id="@+id/changeoneinfo_rl"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/img_full_screen">
            <ImageView
                android:id="@+id/head_set_iv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_delete"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_16"/>
            <TextView
                android:id="@+id/username_set_tv"
                style="@style/TS.Theme.Widget.Text"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/head_set_iv"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="隔壁家的老王"/>
            <TextView
                style="@style/TS.Theme.Widget.Text"
                android:layout_toLeftOf="@+id/set_right_iv"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_5"
                android:text="修改个人资料"/>
            <ImageView
                android:id="@+id/set_right_iv"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@drawable/icon_right"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/changepwd_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_selector"
        android:padding="@dimen/dp_14">

        <TextView
            style="@style/TS.Theme.Widget.Text"
            android:text="@string/change_pwd"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/icon_right"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <RelativeLayout
        android:id="@+id/changephone_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_selector"
        android:padding="@dimen/dp_14">

        <TextView
            style="@style/TS.Theme.Widget.Text"
            android:text="@string/change_phone"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/icon_right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View
        style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <RelativeLayout
        android:id="@+id/changeweixin_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_selector"
        android:padding="@dimen/dp_14">

        <TextView
            style="@style/TS.Theme.Widget.Text"
            android:text="@string/change_weixin"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/icon_right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View
        style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <RelativeLayout
        android:id="@+id/managedeladdress_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_selector"
        android:padding="@dimen/dp_14">

        <TextView
            style="@style/TS.Theme.Widget.Text"
            android:text="@string/manage_delivery_address"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/icon_right"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
</LinearLayout>
