<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.yizhisha.taosha.base.BaseToolbar
        android:id="@+id/toolbar"
        style="@style/basetoolbarStyle"
        app:isShowSearchView="false"
        app:leftButtonIcon="@drawable/icon_right"
        app:title="忘记密码"/>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="60dp">

        <com.yizhisha.taosha.widget.ClearEditText
            android:id="@+id/account_findpwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/font_normal"
            android:hint="@string/hint_input_phone"
            android:drawablePadding="@dimen/dp_5"
            android:textColorHint="@color/common_h2"
            android:drawableLeft="@drawable/icon_account"
            android:padding="@dimen/dp_10" />
    </LinearLayout>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view1"
        android:gravity="center_vertical"
        >
    <com.yizhisha.taosha.widget.ClearEditText
        android:id="@+id/code_findpwd_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:textSize="@dimen/font_normal"
        android:hint="@string/hint_input_code"
        android:padding="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_5"
        android:textColorHint="@color/common_h2"
        android:drawableLeft="@drawable/icon_shield"/>
        <TextView
            android:id="@+id/getcode_findpwd_tv"
            style="@style/TS.Theme.Widget.Text"
            android:textColor="@color/red2"
            android:layout_marginRight="@dimen/dp_10"
            android:text="获取验证码"/>
    </LinearLayout>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view1"
        android:gravity="center_vertical"
        >
        <com.yizhisha.taosha.widget.ClearEditText
            android:id="@+id/setpwd_findpwd_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="@dimen/font_normal"
            android:hint="@string/hint_set_pwd"
            android:padding="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_5"
            android:password="true"
            android:textColorHint="@color/common_h2"
            android:drawableLeft="@drawable/icon_lock"/>
        <ImageView
            android:id="@+id/isShow_setpwd_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:paddingRight="@dimen/dp_10"
            android:src="@drawable/icon_close" />
    </LinearLayout>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view1"
        android:gravity="center_vertical"
        >
        <com.yizhisha.taosha.widget.ClearEditText
            android:id="@+id/againpwd_findpwd_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="@dimen/font_normal"
            android:hint="@string/hint_again_pwd"
            android:padding="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_5"
            android:password="true"
            android:textColorHint="@color/common_h2"
            android:drawableLeft="@drawable/icon_lock_sure"/>
        <ImageView
            android:id="@+id/isShow_againpwd_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:paddingRight="@dimen/dp_10"
            android:src="@drawable/icon_close" />
    </LinearLayout>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>

    <Button
        android:id="@+id/sure_findpwd_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:text="确 认"
        android:textSize="@dimen/font_normal2"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_redbtn_selector"/>
    </LinearLayout>
