<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.yizhisha.taosha.base.BaseToolbar
        android:id="@+id/toolbar"
        style="@style/basetoolbarStyle"
        app:isShowSearchView="false"
        app:leftButtonIcon="@drawable/icon_right"
        app:title="忘记密码"/>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"/>

        <com.yizhisha.taosha.widget.ClearEditText
            android:id="@+id/account_register_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/font_normal"
            android:layout_marginTop="60dp"
            android:drawablePadding="@dimen/dp_5"
            android:hint="@string/hint_input_phone"
            android:textColorHint="@color/common_h2"
            android:drawableLeft="@drawable/icon_delete"
            android:padding="@dimen/dp_10" />
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view1"
        android:gravity="center_vertical"
        >
    <com.yizhisha.taosha.widget.ClearEditText
        android:id="@+id/code_register_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:hint="@string/hint_input_code"
        android:textSize="@dimen/font_normal"
        android:drawablePadding="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:textColorHint="@color/common_h2"
        android:drawableLeft="@drawable/icon_delete"/>
        <TextView
            android:id="@+id/getcode_register_tv"
            style="@style/TS.Theme.Widget.Text"
            android:textColor="@color/red2"
            android:layout_marginRight="@dimen/dp_10"
            android:text="获取验证码"/>
    </LinearLayout>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view1"
        android:gravity="center_vertical"
        >
        <com.yizhisha.taosha.widget.ClearEditText
            android:id="@+id/setpwd_register_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="@dimen/font_normal"
            android:hint="@string/hint_set_pwd"
            android:drawablePadding="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:textColorHint="@color/common_h2"
            android:drawableLeft="@drawable/icon_delete"/>
        <ImageView
            android:id="@+id/setpwd_register_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:paddingRight="@dimen/dp_10"
            android:src="@drawable/icon_delete" />
    </LinearLayout>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view1"
        android:gravity="center_vertical"
        >
        <com.yizhisha.taosha.widget.ClearEditText
            android:id="@+id/againpwd_register_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/font_normal"
            android:hint="@string/hint_again_pwd"
            android:drawablePadding="@dimen/dp_5"
            android:textColorHint="@color/common_h2"
            android:drawableLeft="@drawable/icon_delete"/>
        <ImageView
            android:id="@+id/againpwd_register_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:paddingRight="@dimen/dp_10"
            android:src="@drawable/icon_delete" />
    </LinearLayout>
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>
    <com.yizhisha.taosha.widget.ClearEditText
        android:id="@+id/company_register_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="请输入企业名称"
        android:textSize="@dimen/font_normal"
        android:drawablePadding="@dimen/dp_5"
        android:textColorHint="@color/common_h2"
        android:drawableLeft="@drawable/icon_delete"
        android:padding="@dimen/dp_10" />
    <View style="@style/TS.Theme.Widget.Divider.Line.Vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>

    <Button
        android:id="@+id/sure_findpwd_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:text="确 认"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textSize="@dimen/font_normal2"
        android:background="@drawable/shape_redbtn_selector"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:padding="@dimen/dp_10">
        <CheckBox
            android:id="@+id/terms_cb"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_checxbox_selector"
            android:button="@null" />
        <TextView
            android:id="@+id/terms_register_tv"
            style="@style/TS.Theme.Widget.Text"
            android:layout_toRightOf="@+id/terms_cb"
            android:text="我已同意(大浪淘沙服务条款)"/>
        <TextView
            android:id="@+id/login_register_tv"
            style="@style/TS.Theme.Widget.Text"
            android:layout_alignParentRight="true"
            android:text="已有账号?立即登录"/>
    </RelativeLayout>
    </LinearLayout>
